--- a/Style/style.css
+++ b/Style/style.css
@@ -233,10 +233,10 @@
   font-family: verdana;
 }
 .working-flex1 p {
-  text-align:center;
+  text-align: center;
   font-size: 16px;
   font-weight: 100;
-  font-family:verdana;
+  font-family: verdana;
   padding: 30px;
 }
 .working-flex2 {
@@ -250,119 +250,192 @@
   font-family: verdana;
 }
 .working-flex2 p {
-  text-align:center;
+  text-align: center;
   font-size: 16px;
   font-weight: 100;
-  font-family:verdana;
+  font-family: verdana;
   padding: 30px;
 }
-@media only screen and (min-width:1000px){
-  .container1{
-    margin-top:100px;
+@media only screen and (min-width: 1000px) {
+  .container1 {
+    margin-top: 100px;
   }
-  .flexbox{
-     display:flex;
-    
+  .flexbox {
+    display: flex;
   }
-  .backgroundImagee{
-    width:50%;
-  
+  .backgroundImagee {
+    width: 50%;
   }
-  .working-flex1{
-   width:50%;
-   background-color:black;
+  .working-flex1 {
+    width: 50%;
+    background-color: black;
   }
-  .working-flex2{
-    width:50%;
-    background-color:cyan;
+  .working-flex2 {
+    width: 50%;
+    background-color: cyan;
   }
-  .backgroundImagee2{
-     width:50%;
+  .backgroundImagee2 {
+    width: 50%;
   }
-  .working-flex1 h2{
-    padding-top:50px;
-    padding-left:60px;
-    text-align:left;
-    font-size:40px;
+  .working-flex1 h2 {
+    padding-top: 50px;
+    padding-left: 60px;
+    text-align: left;
+    font-size: 40px;
     text-transform: capitalize;
-    color:white;
-    
+    color: white;
   }
   .working-flex1 p {
-    color:white;
-    padding-left:60px;
-    text-align:left;
-    line-height:30px;
+    color: white;
+    padding-left: 60px;
+    text-align: left;
+    line-height: 30px;
     font-weight: 100;
   }
-  .working-flex2 h2{
-    padding-top:50px;
-    padding-left:60px;
-    text-align:left;
-    font-size:40px;
+  .working-flex2 h2 {
+    padding-top: 50px;
+    padding-left: 60px;
+    text-align: left;
+    font-size: 40px;
     text-transform: capitalize;
-    color:white;
-    
+    color: white;
   }
   .working-flex2 p {
-    color:white;
-    padding-left:60px;
-    text-align:left;
-    line-height:30px;
+    color: white;
+    padding-left: 60px;
+    text-align: left;
+    line-height: 30px;
     font-weight: 100;
   }
-  
 }
-.container2{
-  padding-top:50px;
-  background-color:#ecf0f1;
+.container2 {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  background-color: #ecf0f1;
 }
-.main-line{
-  text-align:center;
-
+.main-line {
+  text-align: center;
 }
-.main-line h3{
-  font-size:20px;
+.main-line h3 {
+  font-size: 20px;
   font-weight: 100;
-  padding:20px;
-  font-family:verdana;
+  padding: 20px;
+  font-family: verdana;
   text-transform: uppercase;
 }
-.lines{
-  display:block;
-  margin:0 auto;  
-  width:45px;
-  height:3px;
-  background-color:green;
-  text-align:center;
-  
+.lines {
+  display: block;
+  margin: 0 auto;
+  width: 45px;
+  height: 3px;
+  background-color: green;
+  text-align: center;
 }
-.email-form{
+.email-form {
+  padding-top: 20px;
+  text-align: center;
+}
+.email-form input {
+  padding: 10px 30px;
+  border: 2px solid grey;
+  font-size: 15px;
+  font-family: verdana;
+  text-transform: capitalize;
+}
+.email-button {
+  text-align: center;
+  padding-top: 20px;
+}
+.email-button input {
+  padding: 10px 20px;
+  background: green;
+  text-transform: capitalize;
+  color: white;
+  border: 1px solid green;
+}
+.email-button input:hover {
+  background-color: lightgreen;
+  transition: 500ms ease;
+  border: 1px solid lightgreen;
+  cursor: pointer;
+}
+.container3 {
+  padding-top: 45px;
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-bottom: 45px;
+}
+.section3-heading {
+  text-align: center;
+  padding: 20px;
+}
+.section3-heading h2 {
+  font-size: 16px;
+  text-transform: capitalize;
+  font-family: verdana;
+}
+.lines3 {
+  display: block;
+  margin: 0 auto;
+  width: 45px;
+  height: 3px;
+  background-color: green;
+  text-align: center;
+}
+.flex-box-container{
+ 
+}
+.work-flex1{
+  width:100%;
+  text-align:center;
+  padding-bottom:20px;
   padding-top:20px;
-  text-align:center;
-  
 }
-.email-form input{
-  padding:10px 30px;
-  border:2px solid grey;
+.work-flex1 h3{
+  text-align:center;
+  padding:20px;
+  font-size:20px;
+  font-family: verdana;
+  font-weight: 100;
+  text-transform:capitalize;
+}
+.work-flex1 p{
+  line-height:20px;
   font-size:15px;
-  font-family:verdana;
-  text-transform: capitalize;
+  font-family: verdana;
+  font-weight: 100;
 }
-.email-button{
+.work-flex1 i{
+  font-size:39px;
   text-align:center;
-  padding-top:15px;
 }
-.email-button input{
-  padding:10px 20px;
-  background:green;
-  text-transform: capitalize;
-  color:white;
-  border:1px solid green;
-}
-.email-button input:hover{
-  background-color:lightgreen;
-  transition:500ms ease;
-  border:1px solid lightgreen;
-  cursor:pointer;
+@media only screen and (min-width:1000px){
+  .section3-heading{
+    text-align:left;
+  }
+  .lines3{
+    text-align:left;
+    display:inline;
+  }
+  .flex-box-container{
+    display:flex;
+    padding-top:30px;
+  }
+  .work-flex1{
+    padding:10px;
+    
+  }
+  .work-flex1 h3{
+    text-align:left;
+  }
+  .work-flex1 p{
+    text-align:left;
+    padding-left:17px;
+  }
+  .work-flex1 i{
+    margin-right:300px;
+  }
+  .extradiv {
+    padding-bottom:25px;
+  }
 }
